force-app/main/default/objects/FunctionRoomGroup__c/FunctionRoomGroup__c.object-meta.xml
<CustomObject>
    <label>Function Room Group</label>
    <nameField>
        <label>Function Room Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Function Room Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>