force-app/main/default/objects/FunctionRoomGroup__c/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <description>Controls the display order of records in the user interface.</description>
    <inlineHelpText>Controls the display order of records in the user interface.</inlineHelpText>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>